Refactored the game endpoints, swagger change
